--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Receita de Cupcake</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alice&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="page">
-      <img src="" alt="" />
+      <img
+        src="/assets/main-image.png"
+        alt="Imagem de alguns cupcakes com grãos de café e chantilly"
+      />
       <main>
         <section id="about">
           <h1>Cupcake de café com chantilly</h1>
