style: :art: add footer

--- a/index.html
+++ b/index.html
@@ -76,4 +76,7 @@
       </main>
     </div>
   </body>
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="Coração" /> pelo Miguel
+  </footer>
 </html>
